[tool.poetry]
name = "rfem"
version = "0.1.0"
description = ""
authors = ["chyalexcheng <chyalexcheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.21.0"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
mpi = "^1.0.0"
mpld3 = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
